--- a/training/superv_comparisons_canberra.Rmd
+++ b/training/superv_comparisons_canberra.Rmd
@@ -500,6 +500,26 @@ head(sim.data, 4)
 cv_sim.test_2 = CV_display.superv_comp(sim.data, test.list, test_index = 3, dist = dists, 
                                        scale = T)
 ```
+```{r}
+mu_0 = c(2, 1)
+mu_1 = c(8, 1)
+S = rbind(c(1, 0.5), c(0.5,1))
+n = 225
+set.seed(600)
+
+Y = sample(c(0,1), n, replace = T, prob = c(0.5, 0.5))
+X = matrix(nrow = n, ncol = 2)
+X[Y == 0,] = round(mvrnorm(sum(Y == 0), mu_0, S), 4)
+X[Y == 1,] = round(mvrnorm(sum(Y == 1), mu_1, S), 4)
+sim.data = as.data.frame(cbind(X, Y))
+sim.data$Y = as.factor(Y)
+colnames(sim.data) = c("X1", "X2", "Y")
+```
+```{r}
+cv_sim.test_2 = CV_display.superv_comp(sim.data, test.list, test_index = 3, dist = dists, 
+                                       scale = T)
+```
+
 \
 Median:
 ```{r}
